--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -42,7 +42,6 @@ jobs:
           git push origin HEAD
 
           curl -X POST \
-            -H 'Accept: application/vnd.github.v3+json'
-            "https://api.github.com/repos/${DST_REPO}/pulls"
+            -H 'Accept: application/vnd.github.v3+json' \
+            "https://api.github.com/repos/${DST_REPO}/pulls" \
             -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${SRC_REPO_NAME}\", \"base\":\"${DST_BRANCH}\" }'
-            
