--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -1,4 +1,4 @@
-name: OpenManual
+name: CopyToOpenManual
 
 on:
   push:
@@ -43,5 +43,5 @@ jobs:
 
           curl -X POST \
             -H 'Accept: application/vnd.github.v3+json' \
-            "https://api.github.com/repos/${DST_REPO}/pulls" \
+            https://api.github.com/repos/${DST_REPO}/pulls \
             -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${SRC_REPO_NAME}\", \"base\":\"${DST_BRANCH}\" }'
