--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "devnull@inter.net"
-          git config --global url."https://${{ secrets.DST_REPO_TKN}}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          git config --global url."https://${{ secrets.DST_REPO_TKN}}@github.com/".insteadOf "https://github.com/"
 
           cd "${DST_DIR}"
           git checkout -b "${SRC_REPO_NAME}"
@@ -49,5 +49,5 @@ jobs:
 
           curl -X POST \
             -H 'Accept: application/vnd.github.v3+json' \
-            'https://${{ secrets.DST_REPO_TKN}}:x-oauth-basic@api.github.com/repos/${DST_REPO}/pulls' \
+            'https://${{ secrets.DST_REPO_TKN}}@api.github.com/repos/${DST_REPO}/pulls' \
             -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${SRC_REPO_NAME}\", \"base\":\"${DST_BRANCH}\" }'
