--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -46,10 +46,10 @@ jobs:
           cp -f "../${SRC_DIR}/${SRC_FILEPATH}" "${DST_DIRNAME}/${SRC_FILEPATH}"
 
           git add "."
-          git commit -am `date +%s`
+          git commit -am `date`
           git push origin HEAD
 
           curl -X POST \
             -H 'Accept: application/vnd.github.v3+json' \
             'https://${{ secrets.DST_REPO_TKN}}@api.github.com/repos/${DST_REPO}/pulls' \
-            -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${SRC_REPO_NAME}\", \"base\":\"${DST_BRANCH}\" }'
+            -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${SRC_REPO_NAME}\", \"base\":\"${DST_BRANCH}\" }"
