--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -52,7 +52,11 @@ jobs:
           git commit -am "`date`"
           git push origin HEAD
 
+          echo curl -X POST \
+            -H 'Accept: application/vnd.github.v3+json' \
+            'https://${{ secrets.DST_REPO_TKN}}@api.github.com/repos/${DST_REPO}/pulls' \
+            -d '{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${{ github.actor }}:${PR_BRANCH}\", \"base\":\"${DST_BRANCH}\" }'
           curl -X POST \
             -H 'Accept: application/vnd.github.v3+json' \
             'https://${{ secrets.DST_REPO_TKN}}@api.github.com/repos/${DST_REPO}/pulls' \
-            -d "{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${{ github.actor }}:${PR_BRANCH}\", \"base\":\"${DST_BRANCH}\" }"
+            -d '{ \"title\":\"${PULLREQ_TITLE}\", \"body\":\"${PULLREQ_MESSAGE}\", \"head\":\"${{ github.actor }}:${PR_BRANCH}\", \"base\":\"${DST_BRANCH}\" }'
