--- a/.github/workflows/CopyToOpenManual.yml
+++ b/.github/workflows/CopyToOpenManual.yml
@@ -14,8 +14,8 @@ env:
   SRC_REPO_NAME: "${{ github.event.repository.name }}"
   DST_REPO: 'SatorImaging/OpenManual'
   DST_BRANCH: 'master'
-  PULLREQ_TITLE: "GitHub Actions"
-  PULLREQ_MESSAGE: "${{ github.workflow }}"
+  PULLREQ_TITLE: "GitHub Actions: ${{ github.workflow }}"
+  PULLREQ_MESSAGE: ""
 
 
 jobs:
@@ -46,7 +46,7 @@ jobs:
           git checkout -b "${PR_BRANCH}"
 
           mkdir "${DST_DIRNAME}"
-          cp -f "../${SRC_DIR}/${SRC_FILEPATH}" "${DST_DIRNAME}/${SRC_FILEPATH}"
+          mv -f --no-target-directory "../${SRC_DIR}/${SRC_FILEPATH}" "${DST_DIRNAME}/${SRC_FILEPATH}"
 
           git add "."
           git commit -am "`date`"
