--- a/.github/workflows/Deploy2OM.yml
+++ b/.github/workflows/Deploy2OM.yml
@@ -18,5 +18,5 @@ jobs:
           output-repo: 'SatorImaging/OpenManual'
           output-branch: 'master'
           git-token: ${{ secrets.DST_REPO_TKN }}
-          git-meail: '16752340+sator-imaging@users.noreply.github.com'
+          git-email: '16752340+sator-imaging@users.noreply.github.com'
           
