--- a/.github/workflows/Deploy2OM.yml
+++ b/.github/workflows/Deploy2OM.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
 
-# Allows you to run this workflow manually from the Actions tab
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 
@@ -12,7 +12,7 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: sator-imaging/Copy-to-Another-Repository@main
+      - uses: sator-imaging/Copy-to-Another-Repository@v1
         with:
           target-filepath: 'README.md'
           output-repo: 'SatorImaging/OpenManual'
